--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,5 +7,110 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+<ion-searchbar showCancelButton="never"></ion-searchbar>
+
+
+<ion-card>
+  <ion-slides>
+
+
+
+    
+<ion-slide>
+<ion-card>
+<ion-card-header>
+  <img src="https://thumbs.gfycat.com/ApprehensiveEducatedGopher-size_restricted.gif" alt="">
+  <ion-card-title>"Bom dia"</ion-card-title>
+  <ion-card-subtitle>Comprimento</ion-card-subtitle>
  
+</ion-card-header>
+
+</ion-card>
+</ion-slide> 
+
+
+<ion-slide>
+<ion-card>
+<ion-card-header>
+  <img src="https://c.tenor.com/rp-B2VzUhOYAAAAd/libras-boa-tarde-em-libras.gif" alt="">
+  <ion-card-title>"Boa tarde"</ion-card-title>
+  <ion-card-subtitle>Comprimento</ion-card-subtitle>
+ 
+</ion-card-header>
+
+</ion-card>
+</ion-slide> 
+
+<ion-slide>
+<ion-card>
+<ion-card-header>
+  <img src="https://1.bp.blogspot.com/-P68PRAhDTlg/YU0cEo8xE1I/AAAAAAAAAd4/n4e4TvUJ4QIBPriHWr-09ZmRDDV0kgOswCLcBGAsYHQ/s720/BOA%2BNOITE.gif" alt="">
+  <ion-card-title>"Boa noite"</ion-card-title>
+  <ion-card-subtitle>Comprimento</ion-card-subtitle>
+</ion-card-header>
+</ion-card>
+</ion-slide> 
+
+<ion-slide>
+<ion-card>
+<ion-card-header>
+  <img src="https://cultura.uol.com.br/webstories/2021/08/aprenda-libras-com-o-menininho-miguel/assets/3.gif" alt="">
+  <ion-card-title>"Oi"</ion-card-title>
+  <ion-card-subtitle>Comprimento</ion-card-subtitle>
+</ion-card-header>
+</ion-card>
+</ion-slide> 
+
+<ion-slide>
+<ion-card>
+<ion-card-header>
+  <img src="https://pa1.narvii.com/7939/5f2b41c2bf91d064ce5c43d01b148701aec64490r1-400-442_hq.gif" alt="">
+  <ion-card-title>"Obrigado"</ion-card-title>
+  <ion-card-subtitle>Comprimento</ion-card-subtitle>
+</ion-card-header>
+</ion-card>
+</ion-slide> 
+
+<ion-slide>
+<ion-card>
+<ion-card-header>
+  <img src="http://www.ebanataw.com.br/libras/TudoBemE.gif" alt="">
+  <ion-card-title>"Tudo bem?"</ion-card-title>
+  <ion-card-subtitle>Comprimento</ion-card-subtitle>
+</ion-card-header>
+</ion-card>
+</ion-slide>
+
+
+<ion-slide>
+<ion-card>
+<ion-card-header>
+  <img src="https://c.tenor.com/8Mc5sO8FUH0AAAAC/asl-sign.gif" alt="">
+  <ion-card-title>"Te amo"</ion-card-title>
+  <ion-card-subtitle>Comprimento</ion-card-subtitle>
+</ion-card-header>
+</ion-card>
+</ion-slide>
+
+  </ion-slides>
+</ion-card>
+
+
+<ion-row>
+<ion-col size="3">
+ariane
+</ion-col>
+
+
+<ion-col>
+rodokas
+</ion-col>
+
+
+<ion-col size="3">
+  barbosa
+</ion-col>
+</ion-row>
+
+
 </ion-content>
