--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,14 +8,28 @@
 
 <ion-content [fullscreen]="true">
 <ion-searchbar showCancelButton="never"></ion-searchbar>
+<br>
+<br>
+<br>
 
 
 <ion-card>
   <ion-slides>
 
 
+  <ion-slide>
+  <ion-card>
+  <ion-card-header>
+    <img src="https://i0.wp.com/desculpenaoouvi.com.br/wp-content/uploads/libras-sinalizada.png" alt="">
+    <ion-card-title>Comprimentos</ion-card-title>
+    <ion-card-subtitle>A acessibilidade aos surdos são de extrema importancia, cada vez mais</ion-card-subtitle>
+    <ion-card-subtitle>crianças e adultos precisam das libras e uma maneira atual e digital de se aprender é aqui</ion-card-subtitle>
+    <ion-card-subtitle>onde te ensinaremos do jeito mais fácil e acessivel "passe as imagens"</ion-card-subtitle>
+  </ion-card-header>
+  </ion-card>
+  </ion-slide>
 
-    
+
 <ion-slide>
 <ion-card>
 <ion-card-header>
@@ -64,8 +78,8 @@
 <ion-slide>
 <ion-card>
 <ion-card-header>
-  <img src="https://pa1.narvii.com/7939/5f2b41c2bf91d064ce5c43d01b148701aec64490r1-400-442_hq.gif" alt="">
-  <ion-card-title>"Obrigado"</ion-card-title>
+  <img src="https://thumbs.gfycat.com/ForsakenUnfoldedChuckwalla-size_restricted.gif" alt="">
+  <ion-card-title>"Obrigada"</ion-card-title>
   <ion-card-subtitle>Comprimento</ion-card-subtitle>
 </ion-card-header>
 </ion-card>
@@ -85,7 +99,7 @@
 <ion-slide>
 <ion-card>
 <ion-card-header>
-  <img src="https://c.tenor.com/8Mc5sO8FUH0AAAAC/asl-sign.gif" alt="">
+  <img src="https://i0.wp.com/j.gifs.com/XDp05W.gif?w=1280&ssl=1" alt="">
   <ion-card-title>"Te amo"</ion-card-title>
   <ion-card-subtitle>Comprimento</ion-card-subtitle>
 </ion-card-header>
